# advent-rs

./: .gitignore  2015.md  CHANGELOG.md  Cargo.toml  NOTES_2015.md  NOTES_2016.md  NOTES_2017.md  NOTES_2018.md  README.md  diagram.d2
.config/: nextest.toml
.github/workflows/: rust.yml
benches/: advent-bench.rs  year_2015.rs  year_2015_day_01.rs  year_2015_day_03.rs  year_2015_day_04.rs  year_2015_day_05.rs  year_2016.rs  year_2016_day_04.rs  year_2016_day_09.rs  year_2017.rs  year_2017_day_01.rs  year_2017_day_02.rs  year_2017_day_04.rs  year_2017_day_13.rs  year_2018.rs
inputs/: year_2015_day_07_sample_v1
inputs/year_2015/: day_25_input
inputs/year_2016/: day_13_input
src/: bfs.rs  common.rs  lib.rs  main.rs  year_2015.rs  year_2016.rs  year_2017.rs  year_2018.rs
src/year_2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs
src/year_2016/: assembunny.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs
src/year_2017/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  knot_hash.rs
src/year_2018/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs
tests/: cli.rs  year_2015_test.rs
