[package]
name = "advent-rs"
version = "2015.17.1"
edition = "2021"
authors = ["Arnaud 'red' Rouyer"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "advent-rs"
path = "src/main.rs"
doc = false
doctest = false

[lib]
name = "advent_rs"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
itertools = "0.12.1"
md-5 = "0.10.6"
mutants = "0.0.3"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "advent-bench"
harness = false
[[bench]]
name = "year_2015_day_01"
harness = false
[[bench]]
name = "year_2015_day_03"
harness = false
[[bench]]
name = "year_2015_day_05"
harness = false
