# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "advent-rs"
version = "2018.6.3"
edition = "2021"
authors = ["Arnaud 'red' Rouyer"]
readme = "README.md"

[[bin]]
name = "advent-rs"
path = "src/main.rs"
doc = false
doctest = false
test = false

[lib]
name = "advent_rs"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 2

[profile.release]
opt-level = 3
strip = true      # Strip symbols
panic = "abort"   # Abort on panic  
# lto = true        # Enable Link Time Optimization
# codegen-units = 1 # Reduce number of codegen units to increase optimizations.

[dependencies]
argh = "0.1.10"
itertools = "0.13.0"
md-5 = "0.10.6"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
criterion = { version = "0.5.1", features = ["html_reports"] }
mutants = "0.0.3"

[[bench]]
name = "year_2015"
harness = false
# [[bench]]
# name = "year_2015_day_01"
# harness = false
# [[bench]]
# name = "year_2015_day_03"
# harness = false
# [[bench]]
# name = "year_2015_day_05"
# harness = false
[[bench]]
name = "year_2016"
harness = false
[[bench]]
name = "year_2017"
harness = false
# [[bench]]
# name = "year_2017_day_01"
# harness = false
# [[bench]]
# name = "year_2017_day_02"
# harness = false
# [[bench]]
# name = "year_2017_day_04"
# harness = false
# [[bench]]
# name = "year_2017_day_13"
# harness = false

[[bench]]
name = "year_2018"
harness = false
